# linuxdeploy-plugin-qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
ci/: Dockerfile  Dockerfile.centos7  Dockerfile.centos7-i386  build-centos7-docker.sh  build-centos7.sh  build-in-docker.sh  build.sh  install-dependencies.sh  install-patchelf.sh  test.sh
ci/docker/: Dockerfile
cmake/toolchains/: i386-linux-gnu.cmake
lib/: CMakeLists.txt
resources/: linuxdeploy-plugin-qt.desktop
src/: CMakeLists.txt  deploy-qml.hpp  deployment.h  main.cpp  qml.cpp  qml.h  qt-modules.h  qt_tools_utils.hpp  util.cpp  util.h  util.hpp
src/deployers/: BasicPluginsDeployer.cpp  BasicPluginsDeployer.h  BearerPluginsDeployer.cpp  BearerPluginsDeployer.h  CMakeLists.txt  GamepadPluginsDeployer.cpp  GamepadPluginsDeployer.h  LocationPluginsDeployer.cpp  LocationPluginsDeployer.h  Multimedia5PluginsDeployer.cpp  Multimedia5PluginsDeployer.h  Multimedia6PluginsDeployer.cpp  Multimedia6PluginsDeployer.h  MultimediaPluginsDeployer.cpp  MultimediaPluginsDeployer.h  NetworkInformationPluginsDeployer.cpp  NetworkInformationPluginsDeployer.h  PlatformPluginsDeployer.cpp  PlatformPluginsDeployer.h  PluginsDeployer.cpp  PluginsDeployer.h  PluginsDeployerFactory.cpp  PluginsDeployerFactory.h  PositioningPluginsDeployer.cpp  PositioningPluginsDeployer.h  PrintSupportPluginsDeployer.cpp  PrintSupportPluginsDeployer.h  QmlPluginsDeployer.cpp  QmlPluginsDeployer.h  Qt3DPluginsDeployer.cpp  Qt3DPluginsDeployer.h  SqlPluginsDeployer.cpp  SqlPluginsDeployer.h  SvgPluginsDeployer.cpp  SvgPluginsDeployer.h  TextToSpeechPluginsDeployer.cpp  TextToSpeechPluginsDeployer.h  TlsBackendsDeployer.cpp  TlsBackendsDeployer.h  WaylandGraphicsIntegrationClientPluginsDeployer.cpp  (+17 more)
test/: CMakeLists.txt  test_deploy_qml.cpp
test/data/qml_project/: file.qml
tests/: CMakeLists.txt  build_appimages.sh  test_deploy_qml.cpp
tests/data/qml_module/: qmldir
tests/data/qml_project/: file.qml
travis/: Dockerfile.centos7  Dockerfile.centos7-i386  build-appimage.sh  build-centos6.sh  build-centos7-docker.sh  build.sh  test.sh
